--- a/index.html
+++ b/index.html
@@ -311,26 +311,21 @@
         const transPerCat = echarts.init(document.getElementById("transPerCat"), 'light');
         transPerCat.setOption({
             color: [
-                "#e01f54",
-                "#001852",
-                "#f5e8c8",
-                "#b8d2c7",
-                "#c6b38e",
-                "#a4d8c2",
-                "#f3d999",
-                "#d3758f",
-                "#dcc392",
-                "#2e4783",
-                "#82b6e9",
-                "#ff6347",
-                "#a092f1",
-                "#0a915d",
-                "#eaf889",
-                "#6699FF",
-                "#ff6666",
-                "#3cb371",
-                "#d5b158",
-                "#38b6b6"
+            "#c1232b",
+            "#27727b",
+            "#fcce10",
+            "#e87c25",
+            "#b5c334",
+            "#fe8463",
+            "#9bca63",
+            "#fad860",
+            "#f3a43b",
+            "#60c0dd",
+            "#d7504b",
+            "#c6e579",
+            "#f4e001",
+            "#f0805a",
+            "#26c0c0"
             ],
             title: {
                 text: 'Number of Transactions per Category',
